syntax = "proto3";

package crm;

option go_package = "github.com/2group/2sales.core-service/pkg/gen/go/crm;crmv1";

service CustomerService {
  rpc GetCustomer (GetCustomerRequest) returns (GetCustomerResponse);
  rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerResponse);
}

message Customer {
    int32 customer_id = 1;
    int32 user_id = 2;
    string first_name = 3;
    string last_name = 4;
    string date_of_birth = 5;
    string created_at = 6;
    string updated_at = 7;
}

message GetCustomerRequest {
    int64 id = 1;
}

message GetCustomerResponse {
    Customer customer = 1;
}

message CreateCustomerRequest {
    Customer customer = 1;
}

message CreateCustomerResponse {
    Customer customer = 1;
}