syntax = "proto3";

option go_package = "github.com/2group/2sales.core-service/pkg/gen/go/organization;organizationv1";

package organization;

service OrganizationService {
    rpc CreateAddress (CreateAddressRequest) returns (CreateAddressResponse);
    rpc GetAddress (GetAddressRequest) returns (GetAddressResponse);
    rpc UpdateAddress (UpdateAddressRequest) returns (UpdateAddressResponse);
    rpc PartialUpdateAddress (PartialUpdateAddressRequest) returns (PartialUpdateAddressResponse);
    rpc DeleteAddress (DeleteAddressRequest) returns (DeleteAddressResponse);

    rpc CreateOrganization (CreateOrganizationRequest) returns (CreateOrganizationResponse);
    rpc GetOrganization (GetOrganizationRequest) returns (GetOrganizationResponse);
    rpc UpdateOrganization (UpdateOrganizationRequest) returns (UpdateOrganizationResponse);
    rpc PartialUpdateOrganization (PartialUpdateOrganizationRequest) returns (PartialUpdateOrganizationResponse);
    rpc DeleteOrganization (DeleteOrganizationRequest) returns (DeleteOrganizationResponse);
    rpc ListOrganizations (ListOrganizationsRequest) returns (ListOrganizationsResponse);

    rpc CreateBranch (CreateBranchRequest) returns (CreateBranchResponse);
    rpc GetBranch (GetBranchRequest) returns (GetBranchResponse);
    rpc UpdateBranch (UpdateBranchRequest) returns (UpdateBranchResponse);
    rpc PartialUpdateBranch (PartialUpdateBranchRequest) returns (PartialUpdateBranchResponse);
    rpc DeleteBranch (DeleteBranchRequest) returns (DeleteBranchResponse);

    rpc CreateLoyaltyLevel (CreateLoyaltyLevelRequest) returns (CreateLoyaltyLevelResponse);
    rpc GetLoyaltyLevel (GetLoyaltyLevelRequest) returns (GetLoyaltyLevelResponse);
    rpc UpdateLoyaltyLevel (UpdateLoyaltyLevelRequest) returns (UpdateLoyaltyLevelResponse);
    rpc ListBonusLevelsByOrganization (ListLoyaltyLevelsByOrganizationRequest) returns (ListLoyaltyLevelsByOrganizationResponse);

    rpc CreateStory (CreateStoryRequest) returns (CreateStoryResponse);
    rpc UpdateStory (UpdateStoryRequest) returns (UpdateStoryResponse);
    rpc ListStory (ListStoryRequest) returns (ListStoryResponse);
    
    rpc CreateBanner (CreateBannerRequest) returns (CreateBannerResponse);
    rpc UpdateBanner (UpdateBannerRequest) returns (UpdateBannerResponse);
    rpc ListBanner (ListBannerRequest) returns (ListBannerResponse);
}

message Address {
    optional int64 id = 1;
    string type = 2;
    string country = 3;
    optional string state = 4;
    optional string city = 5;
    optional string address_line = 6;
    optional double latitude = 7;
    optional double longitude = 8;
    optional string created_at = 9;
    optional string updated_at = 10;
}

message Organization {
    optional int64 id = 1;
    optional string name = 2;
    optional string image_url = 3;
    string type = 4;
    optional string legal_name = 5;
    optional int32 cashback_usage_limit = 6; 
    optional string bin = 8;
    optional string legal_address = 9;
    optional string created_at = 10;
    optional string updated_at = 11;
}

message OrganizationDetail {
    optional int64 id = 1;
    optional string name = 2;
    optional string image_url = 3;
    string type = 4;
    optional string legal_name = 5;
    optional int32 cashback_usage_limit = 6; 
    optional string bin = 7;
    optional string legal_address = 8;
    repeated Branch branches = 9;
    optional string created_at = 10;
    optional string updated_at = 11;
}

message Branch {
    optional int64 id = 1;
    int64  organization_id = 2;
    string name = 3;
    int64  address_id = 4;
    optional string created_at = 5;
    optional string updated_at = 6;
}

message BranchDetail {
    optional int64 id = 1;
    int64 organization_id = 2;
    string name = 3;
    Address address = 4;
    optional string created_at = 5;
    optional string updated_at = 6;
}

message LoyaltyLevel {
    optional int64 id = 1;
    int64 organization_id = 2;
    string name = 3;
    float min_sales_amount = 4;
    int32 cashback_percentage = 5;
    optional string created_at = 6;
    optional string updated_at = 7;
}

message Story {
    optional int64 id = 1;
    optional string title = 2;
    optional string image_url = 3;
    optional string reference_url = 4;
    optional int32  display_index   = 5;
    optional int64  organization_id   = 6;
    optional string created_at = 7;
    optional string updated_at =  8;
}
message Banner{
    optional int64 id = 1;
    optional string title = 2;
    optional string description = 3;
    optional string image_url = 4;
    optional string reference_url = 5;
    optional int32  display_index = 6;
    optional int64  organization_id   = 7;
    optional string created_at = 8;
    optional string updated_at = 9;
}
message CreateLoyaltyLevelRequest {
    LoyaltyLevel loyalty_level = 1;
}

message CreateLoyaltyLevelResponse {
    LoyaltyLevel loyalty_level = 1;
}

message GetLoyaltyLevelRequest {
    int64 id = 1;
}

message GetLoyaltyLevelResponse {
    LoyaltyLevel loyalty_level = 1;
}

message UpdateLoyaltyLevelRequest {
    LoyaltyLevel loyalty_level = 1;
}

message UpdateLoyaltyLevelResponse {
    LoyaltyLevel loyalty_level = 1;
}

message ListLoyaltyLevelsByOrganizationRequest {
    int64 organization_id = 1;
}

message ListLoyaltyLevelsByOrganizationResponse {
    repeated LoyaltyLevel loyalty_levels = 1;
}

message CreateAddressRequest {
    Address address = 1;
}

message CreateAddressResponse {
    Address address = 1;
}

message GetAddressRequest {
    int64 id = 1;
}

message GetAddressResponse {
    Address address = 1;
}

message UpdateAddressRequest {
    Address address = 1;
}

message UpdateAddressResponse {
    Address address = 1;
}

message PartialUpdateAddressRequest {
    Address address = 1;
}

message PartialUpdateAddressResponse {
    Address address = 1;
}

message DeleteAddressRequest {
    int64 id = 1;
}

message DeleteAddressResponse {

}

message CreateOrganizationRequest {
    Organization organization = 1;
}

message CreateOrganizationResponse {
    Organization organization = 1;
}

message GetOrganizationRequest {
    int64 id = 1;
}

message GetOrganizationResponse {
    OrganizationDetail organization = 1;
}

message UpdateOrganizationRequest {
    Organization organization = 1;
}

message UpdateOrganizationResponse {
    Organization organization = 1;
}

message PartialUpdateOrganizationRequest {
    Organization organization = 1;
}

message PartialUpdateOrganizationResponse {
    Organization organization = 1;
}

message DeleteOrganizationRequest {
    int64 id = 1;
}

message DeleteOrganizationResponse {
}

message ListOrganizationsRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message ListOrganizationsResponse {
    repeated Organization organizations = 1;
    int32 total_count = 2;
}

message CreateBranchRequest {
    Branch branch = 1;
}

message CreateBranchResponse {
    Branch branch = 1;
}

message GetBranchRequest {
    int64 id = 1;
}

message GetBranchResponse  {
    BranchDetail branch = 1;
}

message UpdateBranchRequest {
    Branch branch = 1;
}

message UpdateBranchResponse {
    Branch branch = 1;
}

message PartialUpdateBranchRequest {
    Branch branch = 1;
}

message PartialUpdateBranchResponse {
    Branch branch = 1;
}

message DeleteBranchRequest {
    int64 id = 1;
}

message DeleteBranchResponse {

}

message CreateStoryResponse {
    Story story = 1;
}
message CreateStoryRequest {
    Story story = 1;
}
 message UpdateStoryResponse {
    Story story = 1;
}
message UpdateStoryRequest {
    Story story = 1;
}   
message ListStoryResponse {
   repeated  Story stories = 1;
}
message ListStoryRequest {
    int64 organization_id = 1;
}
message CreateBannerResponse {
    Banner banner = 1;
}
message CreateBannerRequest {
    Banner banner = 1;
}
 message UpdateBannerResponse {
    Banner banner = 1;
}
message UpdateBannerRequest {
    Banner banner = 1;
}
message ListBannerResponse {
 repeated Banner banners = 1;
}
message ListBannerRequest {
    int64 organization_id = 1;
}